--- a/requirements.txt
+++ b/requirements.txt
@@ -29,12 +29,12 @@ Pygments==2.19.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
 referencing==0.35.1
-requests==2.32.4
+requests
 rich==13.9.4
 rpds-py==0.20.1
 six==1.17.0
 smmap==5.0.2
-streamlit==1.40.1
+streamlit
 tenacity==9.0.0
 toml==0.10.2
 tornado==6.4.2
@@ -43,3 +43,5 @@ tzdata==2025.2
 urllib3==2.2.3
 watchdog==4.0.2
 zipp==3.20.2
+langchain==0.1.14
+openai==0.27.8
