--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ rich==13.9.4
 rpds-py==0.20.1
 six==1.17.0
 smmap==5.0.2
-streamlit
+streamlit==1.32.0
 tenacity==9.0.0
 toml==0.10.2
 tornado==6.4.2
